--- a/intro/pubspec.yaml
+++ b/intro/pubspec.yaml
@@ -1,4 +1,4 @@
-name: excercies_01
+name: intro
 description: A new Flutter project.
 
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
