--- a/intro/windows/runner/Runner.rc
+++ b/intro/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "excercies_01" "\0"
+            VALUE "FileDescription", "intro" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "excercies_01" "\0"
+            VALUE "InternalName", "intro" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "excercies_01.exe" "\0"
-            VALUE "ProductName", "excercies_01" "\0"
+            VALUE "OriginalFilename", "intro.exe" "\0"
+            VALUE "ProductName", "intro" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
